--- a/Dockerfiles/glances/Dockerfile
+++ b/Dockerfiles/glances/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER @adrien-f <adrien.fillon@gmail.com>
 VOLUME /config
 EXPOSE 61208/tcp
 
-CMD python -m glances $GLANCES_ARGS
+CMD python -m glances --quiet --export-influxdb
